# GoalRPG

./: .gitignore  README.md  goals.txt  pyproject.toml
src/goal_rpg/: main.py
